demodir = $(bindir)/demo
demo_PROGRAMS = demo1 demo2 demo3 demo4 demo5 demo6 quicksort_demo
demo1_SOURCES = %D%/demo1.c
demo1_LDADD = libac.la
demo1_LDFLAGS = -static

demo2_SOURCES = %D%/demo2.c
demo2_LDADD = libac.la
demo2_LDFLAGS = -static

demo3_SOURCES = %D%/demo3.c
demo3_LDADD = libac.la
demo3_LDFLAGS = -static

demo4_SOURCES = %D%/demo4.c
demo4_LDADD = libac.la
demo4_LDFLAGS = -static

demo5_SOURCES = %D%/demo5.c
demo5_LDADD = libac.la
demo5_LDFLAGS = -static

demo6_SOURCES = %D%/demo6.c
demo6_LDADD = libac.la
demo6_LDFLAGS = -static

quicksort_demo_SOURCES = %D%/quicksort_demo.c
quicksort_demo_LDADD = libac.la
quicksort_demo_LDFLAGS = -static
