lib_LIBRARIES = libac-core.a

libac_core_a_SOURCES = ac-core/src/ac_allocator.c\
    ac-core/src/ac_buffer.c\
    ac-core/src/ac_common.c\
    ac-core/src/ac_conv.c\
    ac-core/src/ac_map.c\
    ac-core/src/ac_pool.c\
    ac-core/src/ac_sort.c

libac_core_a_HEADERS = ac-core/include/ac_allocator.h\
    ac-core/include/ac_buffer.h\
    ac-core/include/ac_common.h\
    ac-core/include/ac_conv.h\
    ac-core/include/ac_map.h\
    ac-core/include/ac_pool.h\
    ac-core/include/ac_sort.h\
    ac-core/include/ac-core/ac_buffer.h\
    ac-core/include/ac-core/ac_map.h\
    ac-core/include/ac-core/ac_pool.h\
    ac-core/include/ac-core/ac_search.h\
    ac-core/include/ac-core/ac_sort.h\
    ac-core/include/ac-core/ac_map/ac_map_arg_m.h\
    ac-core/include/ac-core/ac_map/ac_map_compare_arg_m.h\
    ac-core/include/ac-core/ac_map/ac_map_compare_m.h\
    ac-core/include/ac-core/ac_map/ac_map_m.h\
    ac-core/include/ac-core/ac_map/ac_map2_arg_m.h\
    ac-core/include/ac-core/ac_map/ac_map2_compare_arg_m.h\
    ac-core/include/ac-core/ac_map/ac_map2_compare_m.h\
    ac-core/include/ac-core/ac_map/ac_map2_m.h\
    ac-core/include/ac-core/ac_search/ac_search.h\
    ac-core/include/ac-core/ac_search/ac_search_arg_m.h\
    ac-core/include/ac-core/ac_search/ac_search_compare_arg_m.h\
    ac-core/include/ac-core/ac_search/ac_search_compare_m.h\
    ac-core/include/ac-core/ac_search/ac_search_m.h\
    ac-core/include/ac-core/ac_sort/ac_sort_arg_m_m.h\
    ac-core/include/ac-core/ac_sort/ac_sort_aux.h\
    ac-core/include/ac-core/ac_sort/ac_sort_compare_arg_m.h\
    ac-core/include/ac-core/ac_sort/ac_sort_compare_m.h\
    ac-core/include/ac-core/ac_sort/ac_sort_m.h

include_HEADERS = ${libac_core_a_HEADERS}
