ACLOCAL_AMFLAGS = -I m4
AM_CFLAGS = -I$(top_srcdir)/src @AM_CFLAGS@

check_PROGRAMS = demo1 demo2 demo3 demo4 demo5 demo6 quicksort_demo rf
demo1_SOURCES = demo1.c
demo1_LDADD = $(top_builddir)/src/libac.a

demo2_SOURCES = demo2.c
demo2_LDADD = $(top_builddir)/src/libac.a

demo3_SOURCES = demo3.c
demo3_LDADD = $(top_builddir)/src/libac.a

demo4_SOURCES = demo4.c
demo4_LDADD = $(top_builddir)/src/libac.a

demo5_SOURCES = demo5.c
demo5_LDADD = $(top_builddir)/src/libac.a

demo6_SOURCES = demo6.c
demo6_LDADD = $(top_builddir)/src/libac.a

quicksort_demo_SOURCES = quicksort_demo.c
quicksort_demo_LDADD = $(top_builddir)/src/libac.a

rf_SOURCES = rf.c
rf_LDADD = $(top_builddir)/src/libac.a
